# KoShelf

./: .env.example  .gitignore  .prettierignore  Cargo.toml  Koreader_Syncthing_Docker_Setup.md  Koreader_Syncthing_Setup.md  Makefile.toml  README.md  THIRD_PARTY_LICENSES.md  about.toml  build.rs  eslint.config.mjs  koshelf.example.toml  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.cargo/: audit.toml  config.toml
.githooks/: commit-msg
.github/scripts/: collect-frontend-build-assets.sh
.github/workflows/: ci.yml  codeql.yml  release.yml
assets/: book_detail.js  book_list.js  calendar.js  heatmap.js  input.css  lazy-loading.js  manifest.json  modal-utils.js  pwa.js  recap.js  script.js  section-toggle.js  service-worker.js  statistics.js  storage-manager.js
assets/css/: calendar.css  input.css
assets/ts/: base.ts  book_list.ts  calendar.ts  filter-restore.ts  heatmap.ts  i18n.ts  item_detail.ts  lazy-loading.ts  library_list.ts  modal-utils.ts  pwa.ts  recap.ts  section-toggle.ts  service-worker.ts  statistics.ts  storage-manager.ts  tilt-effect.ts  tooltip-manager.ts
assets/ts/app/: base.ts  service-worker.ts
assets/ts/components/: heatmap.ts  hover-preview.ts  lazy-loading.ts  modal-utils.ts  section-toggle.ts  tilt-effect.ts  tooltip-manager.ts  webkit-repaint-hack.ts  yearly-stats-chart.ts
assets/ts/pages/: calendar.ts  item_detail.ts  library_list.ts  recap.ts  statistics.ts
assets/ts/shared/: active-option.ts  api.ts  dropdown.ts  filter-restore.ts  horizontal-scroll.ts  i18n.ts  pwa.ts  statistics-data-loader.ts  statistics-formatters.ts  storage-manager.ts
docs/: API.md  RELEASING.md  authentication.md  configuration.md  installation.md  koreader-setup.md  stable-page-metadata.md  static-export.md  statistics_database.md  supported-data.md
docs/syncthing_setups/: README.md  setup_from_alva_seal.md
frontend/: .gitignore  README.md  eslint.config.js  index.html  license-checker-format.json  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts  vitest.config.ts
frontend/locales/: README.md  de.ftl  en.ftl  en_GB.ftl  es.ftl  es_ES.ftl  fr.ftl  hu.ftl  pt.ftl  ru.ftl  uk.ftl
frontend/public/: manifest.json  theme-bootstrap.js
frontend/scripts/: check-intl-region-support.ts  validate-locales.mjs
frontend/src/: App.tsx  main.tsx
frontend/src/app/: AppRoutes.tsx
frontend/src/pages/: PlaceholderPage.tsx  StatisticsPage.tsx
frontend/src/shared/: api-client.ts  api-fetch.test.ts  api-fetch.ts  api.ts  auth-session.test.ts  auth-session.ts  contracts.ts  horizontal-scroll.ts  http-api-client.ts  i18n.ts  runtime-updates.tsx  static-api-client.ts  statistics-data-loader.ts  statistics-formatters.ts  storage-manager.ts  theme.ts
frontend/src/styles/: app.css  calendar.css
locales/: README.md  de.ftl  en.ftl  en_GB.ftl  es_ES.ftl  fr.ftl  pt.ftl  pt_BR.ftl  ru.ftl  uk.ftl
src/: app.rs  book_scanner.rs  calendar.rs  cli.rs  comic_parser.rs  config.rs  epub_parser.rs  fb2_parser.rs  file_watcher.rs  i18n.rs  lib.rs  library_scanner.rs  lua_parser.rs  main.rs  mobi_parser.rs  models.rs  partial_md5.rs  read_completion_analyzer.rs  session_calculator.rs  share_image.rs  site_generator.rs  statistics.rs  statistics_parser.rs  templates.rs  time_config.rs  utils.rs  web_server.rs
src/api/: error.rs  extractors.rs  mod.rs  params.rs  server.rs
src/api/handlers/: events.rs  library.rs  mod.rs  reading.rs  site.rs
src/api/responses/: error.rs
src/app/: bootstrap.rs  cli.rs  config.rs  mod.rs  run.rs
src/app/commands/: export.rs  licenses.rs  mod.rs  serve.rs  set_password.rs
src/app/config/: cli.rs  file.rs  mod.rs  site.rs
src/contracts/: calendar.rs  common.rs  error.rs  library.rs  locales.rs  mappers.rs  mod.rs  reading.rs  recap.rs  site.rs  statistics.rs
src/domain/: meta.rs  mod.rs
src/domain/reading/: available_periods.rs  calendar.rs  calendar_calc.rs  completion_calc.rs  completions.rs  metrics.rs  mod.rs  queries.rs  scaling.rs  service.rs  session_calc.rs  shared.rs  statistics.rs  statistics_calc.rs  summary.rs  types.rs
src/i18n/: mod.rs  translations.rs
src/infra/: lifecycle.rs  mod.rs  scanner.rs  watcher.rs
src/infra/assets/: mod.rs
src/infra/sources/: mod.rs
src/infra/sqlite/: library_db.rs  lifecycle.rs  migrations.rs  mod.rs
src/koreader/: calendar.rs  completion.rs  database.rs  lua.rs  mod.rs  partial_md5.rs  session.rs  statistics.rs  types.rs
src/models/: book.rs  calendar.rs  completions.rs  koreader_metadata.rs  library_item.rs  merge_precedence.rs  mod.rs  reading_data.rs  recap.rs  statistics.rs
src/parsers/: comic.rs  epub.rs  fb2.rs  mobi.rs  mod.rs
src/pipeline/: embed.rs  export.rs  frontend.rs  media.rs  mod.rs  rebuild.rs  recap.rs  watcher.rs
src/runtime/: export.rs  ingest.rs  media.rs  mod.rs  observability.rs  reading_data.rs  rebuild.rs  recap.rs  revisions.rs  snapshot.rs  store.rs  updates.rs
src/server/: api.rs  frontend.rs  mod.rs  version.rs  web.rs
src/share/: image.rs  mod.rs
src/shelf/: mod.rs  query_enum.rs  token_set.rs  utils.rs
src/site_generator/: assets.rs  books.rs  cache_manifest.rs  calendar.rs  library_pages.rs  mod.rs  recap.rs  statistics.rs  utils.rs
src/snapshot_builder/: assets.rs  calendar.rs  library.rs  mod.rs  recap.rs  scaling.rs  statistics.rs  utils.rs
src/source/: fingerprints.rs  kobo.rs  mod.rs  scanner.rs  sqlite_snapshot.rs
src/store/: lifecycle.rs  mod.rs
src/tests/: fixtures.rs  i18n.rs  mod.rs  statistics.rs
templates/: 404.html  app_layout.html  base.html  book.html  book_details.html  book_list.html  bottom_navbar.html  index.html  sidebar.html
templates/book_details/: book_details.html  book_details.md
templates/book_list/: book_list.html
templates/calendar/: calendar.html
templates/components/: toggle_button.html
templates/item_details/: item_details.html
templates/library_list/: library_list.html
templates/recap/: recap_empty.html  recap_year.html
templates/statistics/: statistics.html  statistics_empty.html
(+305 files in other folders)
