[package]
name = "koshelf"
version = "2026.4.0"
description = "KoShelf — a reading companion powered by KOReader metadata."
repository = "https://github.com/paviro/KOShelf"
license = "EUPL-1.2 license"
authors = ["Paul-Vincent Roll"]
edition = "2024"
build = "build.rs"

[dependencies]
# CLI
clap = { version = "4.5.40", features = ["derive", "env"] }
# Error handling
anyhow = "1.0.98"
# Async
tokio = { version = "1.45.1", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "signal",
    "time",
    "sync",
] }
# File system
walkdir = "2.5.0"
# File system watching
notify = "8.0.0"
# Temporary directories
tempfile = "3.20.0"
# EPUB and .fb2.zip parsing
zip = "8.4.0"
# Image processing
image = { version = "0.25.6", default-features = false, features = [
    "jpeg",
    "png",
    "webp",
    "gif",
] }
webp = "0.3.1"
# Lua parsing (use LuaJIT to match KoReader's runtime)
mlua = { version = "0.11.5", features = ["luajit", "vendored", "send"] }
# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
toml = "1.0.6"
# Date/time
chrono = { version = "0.4.41", features = ["serde", "std", "unstable-locales"] }
# Logging
log = "0.4.27"
env_logger = "0.11.8"
# Progress bars
indicatif = "0.18"
# XML parsing
quick-xml = "0.39.2"
# HTML sanitization
ammonia = "4.1.2"
# Web server (for live server mode)
axum = "0.8.4"
tower = "0.5"
tower-http = { version = "0.6", features = [
    "fs",
    "set-header",
    "compression-gzip",
    "compression-br",
] }
# Futures utilities
futures = "0.3"
# SQLite database access
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros", "derive", "json"] }
chrono-tz = "0.10"
md5 = "0.8.0"
regex = "1.12.2"
resvg = "0.47"
base64 = "0.22"
include_dir = "0.7.4"
unic-langid = "0.9"
# ICU4X for localized language display names
icu_displaynames = "0.11"
icu_locid = "1.4"
fluent = "0.17"
fluent-bundle = "0.16"
intl-memoizer = "0.5"
argon2 = "0.5"
rand = "0.9"
rusty_paseto = "0.9"
rpassword = "7.4"
governor = "0.10.4"
dashmap = "6"
uuid = { version = "1", features = ["v4", "v7"] }
ipnet = "2"

[target.'cfg(not(windows))'.dependencies]
# Memory allocator
tikv-jemallocator = "0.6"
# CBR/RAR archive extraction (not supported on Windows)
unrar = "0.5"

[build-dependencies]
ureq = "3.3.0"

[dev-dependencies]
ureq = { version = "3.3.0", features = ["json"] }
rayon = "1.11.0"
fluent-syntax = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
